# awtrix-pom

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
