[package]
name = "awtrix-pom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.31"
ctrlc = "3.4.1"
log = "0.4.20"
serde = "1.0.190"
serde_json = "1.0.107"
stderrlog = "0.5.4"
ureq = {version = "2.8.0", features = ["json"]}
url = "2.4.1"
